deployments/infra/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  annotations:
    linkerd.io/inject: disabled
