deployments/infra/linode-dynamic-dns.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: linode-dynamic-dns
  namespace: infra
  labels:
    app: linode-dynamic-dns
spec:
  replicas: 0
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: linode-dynamic-dns
  template:
    metadata:
      annotations:
        SECRET_TOKEN: /apps/infra/linode-dynamic-dns/token
      labels:
        app: linode-dynamic-dns
    spec:
      containers:
        - name: dyndns
          image: rebelinblue/linode-dynamic-dns:0.6.2
          command:
            - sh
            - -c
          args:
            - source /env/secrets; linode-dynamic-dns -s "$(expr "$FREQUENCY" '*' 60)"
          resources:
            limits:
              cpu: 10m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 20Mi
          volumeMounts:
            - mountPath: /env
              name: env
      volumes:
        - name: env
          emptyDir: {}
        - name: podinfo
          downwardAPI:
            defaultMode: 420
            items:
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.annotations
                path: annotations
